--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Professor Ayan </title>
-  <link rel="icon" href="https://i.postimg.cc/k4PbRrZm/Chat-GPT-Image-Jun-13-2025-01-21-57-AM.png" type="image/jpeg" />
+  <link rel="icon" href="https://i.postimg.cc/rwj65bN2/ptr8-IPsa-400x400.jpg" type="image/jpeg" />
   <style>
     * {
       margin: 0;
