--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
 <!-- Content -->
 <div class="container">
   <div class="card">
-    <img class="profile-pic" src="https://i.postimg.cc/k4PbRrZm/Chat-GPT-Image-Jun-13-2025-01-21-57-AM.png" alt="Profile Picture" />
+    <img class="profile-pic" src="https://i.postimg.cc/rwj65bN2/ptr8-IPsa-400x400.jpg" alt="Profile Picture" />
     <h1>PROFESSOR AYAN X OFFICAL</h1>
     <p>Hi! I'm AYAN — a creative tech lover building websites, AI tools, and E-books. I'm the proud owner of AYAN GRAPHICS X AI ENGINEER, passionate about merging innovation and aesthetics through design and development.</p>
 
