--- a/portfolio112.html
+++ b/portfolio112.html
@@ -3,39 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Professor Ayan </title>
+  <title>Professor Ayan - AI Engineer</title>
   <link rel="icon" href="https://i.postimg.cc/rwj65bN2/ptr8-IPsa-400x400.jpg" type="image/jpeg" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     html, body {
       height: 100%;
       font-family: 'Poppins', sans-serif;
-      color: #00ff88;
       background: transparent;
       overflow: hidden;
+      color: #00ff88;
     }
 
-    canvas#matrix {
+    canvas#matrix, canvas#particles {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -2;
-      background: black;
+      pointer-events: none;
     }
+
+    #matrix { z-index: -3; background: black; }
+    #particles { z-index: -2; }
 
     .overlay {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: rgba(0, 0, 0, 0.4);
       z-index: -1;
     }
@@ -44,23 +40,22 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
       padding: 60px 20px;
       height: 100%;
       overflow-y: auto;
       z-index: 1;
       position: relative;
+      text-align: center;
     }
 
     .card {
       background: rgba(0, 0, 0, 0.3);
+      border: 1px solid #00ff88;
       border-radius: 20px;
       padding: 40px 30px;
-      border: 1px solid #00ff88;
-      text-align: center;
+      backdrop-filter: blur(2px);
       max-width: 800px;
       width: 100%;
-      backdrop-filter: blur(2px);
       animation: fadeIn 1.5s ease forwards;
     }
 
@@ -138,49 +133,9 @@
 </head>
 <body>
 
-<!-- Matrix Background Canvas -->
+<!-- Matrix & Particles Background -->
 <canvas id="matrix"></canvas>
-<script>
-  const canvas = document.getElementById("matrix");
-  const ctx = canvas.getContext("2d");
-
-  canvas.height = window.innerHeight;
-  canvas.width = window.innerWidth;
-
-  const letters = "01";
-  const fontSize = 16;
-  const columns = Math.floor(canvas.width / fontSize);
-  const drops = Array.from({ length: columns }).fill(1);
-
-  function drawMatrix() {
-    ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    ctx.fillStyle = "#00ff88"; // Green matrix
-    ctx.font = fontSize + "px monospace";
-
-    for (let i = 0; i < drops.length; i++) {
-      const text = letters.charAt(Math.floor(Math.random() * letters.length));
-      const x = i * fontSize;
-      const y = drops[i] * fontSize;
-
-      ctx.fillText(text, x, y);
-
-      if (y > canvas.height && Math.random() > 0.975) {
-        drops[i] = 0;
-      }
-
-      drops[i]++;
-    }
-  }
-
-  setInterval(drawMatrix, 40);
-
-  window.addEventListener("resize", () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-  });
-</script>
+<canvas id="particles"></canvas>
 
 <!-- Overlay -->
 <div class="overlay"></div>
@@ -219,6 +174,89 @@
 
   <footer>© 2025 PROxAYAN. All rights reserved.</footer>
 </div>
+
+<!-- JavaScript Animations -->
+<script>
+  // MATRIX CODE
+  const canvas = document.getElementById("matrix");
+  const ctx = canvas.getContext("2d");
+  canvas.height = window.innerHeight;
+  canvas.width = window.innerWidth;
+  const letters = "01";
+  const fontSize = 16;
+  const columns = Math.floor(canvas.width / fontSize);
+  const drops = Array.from({ length: columns }).fill(1);
+
+  function drawMatrix() {
+    ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    ctx.fillStyle = "#00ff88";
+    ctx.font = fontSize + "px monospace";
+
+    for (let i = 0; i < drops.length; i++) {
+      const text = letters.charAt(Math.floor(Math.random() * letters.length));
+      const x = i * fontSize;
+      const y = drops[i] * fontSize;
+
+      ctx.fillText(text, x, y);
+      if (y > canvas.height && Math.random() > 0.975) drops[i] = 0;
+      drops[i]++;
+    }
+  }
+  setInterval(drawMatrix, 40);
+
+  // PARTICLE CODE
+  const canvasP = document.getElementById('particles');
+  const ctxP = canvasP.getContext('2d');
+  canvasP.width = window.innerWidth;
+  canvasP.height = window.innerHeight;
+  const particles = [];
+
+  class Particle {
+    constructor() {
+      this.x = Math.random() * canvasP.width;
+      this.y = Math.random() * canvasP.height;
+      this.radius = Math.random() * 2 + 1;
+      this.dx = Math.random() * 0.6 - 0.3;
+      this.dy = Math.random() * 0.6 - 0.3;
+    }
+    draw() {
+      ctxP.beginPath();
+      ctxP.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+      ctxP.fillStyle = '#00ff88';
+      ctxP.shadowBlur = 8;
+      ctxP.shadowColor = '#00ff88';
+      ctxP.fill();
+      ctxP.closePath();
+    }
+    update() {
+      this.x += this.dx;
+      this.y += this.dy;
+      if (this.x < 0 || this.x > canvasP.width) this.dx *= -1;
+      if (this.y < 0 || this.y > canvasP.height) this.dy *= -1;
+      this.draw();
+    }
+  }
+
+  for (let i = 0; i < 80; i++) {
+    particles.push(new Particle());
+  }
+
+  function animateParticles() {
+    ctxP.clearRect(0, 0, canvasP.width, canvasP.height);
+    particles.forEach(p => p.update());
+    requestAnimationFrame(animateParticles);
+  }
+
+  animateParticles();
+
+  window.addEventListener("resize", () => {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    canvasP.width = window.innerWidth;
+    canvasP.height = window.innerHeight;
+  });
+</script>
 
 </body>
 </html>
